--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -492,5 +492,6 @@
   "Party": "Купонясване",
   "Dating by personality and interests.": "Запознанства по характер и интереси.",
   "Add other hobbies...": "Добави други хобита...",
-  "Add other activities...": "Добави други дейности..."
+  "Add other activities...": "Добави други дейности...",
+  "People with whom you have like each other and matched.": "Хора, с които сте се харесали и съвпадали."
 }
