terms and privacy links and updated styles

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -509,5 +509,7 @@
   "Sagittarius": "Стрелец",
   "Capricorn": "Козирог",
   "Aquarius": "Водолей",
-  "Pisces": "Риби"
+  "Pisces": "Риби",
+  "Terms of Usage": "Условия за Ползване",
+  "Privacy Policy": "Политика за Поверителност"
 }
