Added terms message on sign up page

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -511,5 +511,7 @@
   "Aquarius": "Водолей",
   "Pisces": "Риби",
   "Terms of Usage": "Условия за Ползване",
-  "Privacy Policy": "Политика за Поверителност"
+  "Privacy Policy": "Политика за Поверителност",
+  "By continuing, you're confirming that you've read and agree to our": "Продължавайки, вие потвърждавате, че сте прочели и приемате нашите",
+  "and": "и"
 }
