Update quiz question translations

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -146,7 +146,7 @@
   "What is most likely to make you interested in someone?": "Какво най-вероятно ще ви заинтересува от някого?",
   "Are you happy with your physical appearance?": "Доволен ли сте от външния си вид?",
   "Why are you here?": "Защо си тук?",
-  "Is religion important to you": "Важна ли е религията за вас",
+  "Is religion important to you?": "Важна ли е религията за вас",
   "Do you feel more at ease at home than when you are out in a large gathering?": "Чувствате ли се по-спокойно у дома, отколкото когато сте на голямо събиране?",
   "Where do you like to spend your free time?": "Къде обичаш да прекарваш свободното си време?",
   "Do you enjoy taking long walks?": "Обичате ли да правите дълги разходки?",
@@ -434,7 +434,7 @@
   "It's somewhat important": "Не е много е важно",
   "It doesn't matter": "Няма значение",
   "Would you date someone just for the sex?": "Бихте ли излизали с някого само заради секса?",
-  "Is astrological sign important in a match?": "Зодията има ли значени при съвпадането с някой?",
+  "Is astrological sign important to you?": "Зодията важна ли е за вас?",
   "Is it a requirement that you communicate every day with your parthner?": "Изискване ли е да общувате всеки ден с партньора си?",
   "Do you feel obligated to help other humans?": "Чувствате ли се задължени да помагате на други хора?",
   "Not sure": "Не съм сигурен",
