Added login/signup with google

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -517,5 +517,7 @@
   "and": "и",
   "Favorite interest": "Любим интерес",
   "Set as favorite. Favorite interests have priority.": "Направи този интерес любим. Любимите интереси се приотеризират.",
-  "You can't have more than 3 favorite interests.": "Не може да имате повече от 3 любими интереса."
+  "You can't have more than 3 favorite interests.": "Не може да имате повече от 3 любими интереса.",
+  "Or login with": "Или влез с",
+  "Or sign up with": "Или влез с"
 }
