Changed search to by all users by default

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -529,5 +529,6 @@
   "middle income": "Среден доход",
   "high income": "Висок доход",
   "Doesn't matter": "Няма значение",
-  "None:income": "Без доход"
+  "None:income": "Без доход",
+  "Search": "Търси"
 }
