Moved change language to account setting page

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -530,5 +530,6 @@
   "high income": "Висок доход",
   "Doesn't matter": "Няма значение",
   "None:income": "Без доход",
-  "Search": "Търси"
+  "Search": "Търси",
+  "Language": "Език"
 }
