Updated app title

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -491,7 +491,7 @@
   "Jogging": "Джогинг",
   "Going out": "Да излизам навън",
   "Party": "Купонясване",
-  "Dating by personality and interests.": "Запознанства по характер и интереси.",
+  "Dating by personality and interests.": "Сериозни запознанства по характер и интереси.",
   "Add other hobbies...": "Добави други хобита...",
   "Add other activities...": "Добави други дейности...",
   "People with whom you have like each other and matched.": "Хора, с които сте се харесали и съвпадали.",
