Fields validation and error messages fixes

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -262,6 +262,8 @@
   "record": "започни запис",
   "stop recording": "спри запис",
   "Remaining sec for recording.": "Записът продължава още {{timeElapsed}} секунди.",
+  "Min length required": "Трябва да е {{requiredLength}} или повече символа",
+  "Max length required": "Трябва да е не повече от {{requiredLength}} символа",
   "Smokes regularly": "Пуши постоянно",
   "Smokes sometimes": "Пуши от време на време",
   "Doesn't smoke": "Не пуши",
@@ -404,7 +406,7 @@
   "Don't worry - no one else will see the photo.": "Никой друг няма да види тази снимка.",
   "Take photo": "Снимай се",
   "Retake photo": "Снимай се отново",
-  "e.g. Georgi Petrov": "примерно Георги Петров",
+  "Your name": "Вашето име",
   "Profile": "Профил",
   "Photo": "Снимка",
   "Personality:stepper": "Личност",
