Added verification with image

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -346,8 +346,8 @@
   "You have completed the personality quiz!": "Успешно попълнихте тестът за личност!",
   "Verify yourself": "Потвърди се",
   "and show that it is really you!": "и покажи, че наистина си ти!",
-  "Verification Request": "Заявка за Потвърждение",
-  "verification pending": "потвърждението се обработва",
+  "Verification Request": "Заявка за проверка",
+  "verification pending": "предстои проверка",
   "verify profile": "потвърди се",
   "verified": "потвърден",
   "Verified with photo": "Потвърден със снимка",
@@ -355,13 +355,14 @@
   "Tap on image to retake image": "Натиснете изображението, за да снимате отново",
   "Tap on video to capture image": "Натиснете видеото, за да снимате",
   "Send for verification": "Изпрати за преглед",
-  "Verification request sent": "Заявката за потвърждение изпратена",
-  "You must upload a profile image before you request verification.": "Трябва да имате профилна снимка, за да заявите преглед за потвърждение,",
+  "Verification request sent": "Заявката за преглед е изпратена",
+  "You must upload a profile image before you request verification.": "Трябва да имате профилна снимка, за да заявите преглед.",
   "Why should I verify my profile?": "Защо да се потвърдя?",
-  "You show people that it's really you": "Показвате на другите хора, че наистина сте вие",
+  "You show people that it's really you": "Другите хора се чувстват по-сигурни като показвате, че наистина сте вие.",
   "When you're verified then ONLY other verified people can contact you": "Когато сте потвърдени то тогава само други потвърдени хора могат да се свържат с вас",
-  "How does verification work?": "Как става потвърждението?",
-  "Take a photo (from your current device) with the target gesture and submit it. The verification photo will be compared to your profile picture": "Снимай се (от текущото ти устройство) с дадената поза и изпрати заявката. Снимката от верификацията се сравнява с профилната ви снимка",
+  "How does verification work?": "Как работи проверката?",
+  "Take a photo (from your current device) with the target gesture and submit it.": "Снимайте се от камерата на текущото ви устройство с дадената поза и изпратете заявката за потвърждаване.",
+  "The verification photo will be compared to your profile picture": "Направената снимката от тази заявка се сравнява с профилната ви снимка.",
   "Start verification": "Започни",
   "You must be verified to like this user.": "Трябва да сте потвърдени, за да харесате този потребител.",
   "Enter": "Въведете",
@@ -404,8 +405,8 @@
   "Write something about you...": "Напиши нещо за теб...",
   "Write something here...": "Напиши нещо тук...",
   "Don't worry - no one else will see the photo.": "Никой друг няма да види тази снимка.",
-  "Take photo": "Снимай се",
-  "Retake photo": "Снимай се отново",
+  "Take photo": "Снимай",
+  "Retake photo": "Снимай отново",
   "Your name": "Вашето име",
   "Profile": "Профил",
   "Photo": "Снимка",
@@ -537,5 +538,9 @@
   "Inappropriate image content": "Избраната снимка не отговаря на правилата ни за съдържание",
   "Error uploading image": "Възникна грешка при качването на снимката",
   "Internal server error": "Възникна грешка при обработката на заявката",
-  "Reset": "Изчисти"
+  "Reset": "Изчисти",
+  "Take a photo with the target gesture bellow": "Снимай се с дадената поза по-долу",
+  "Click on photo or 'Start verification' button to start": "Кликнете на снимката или натиснете 'Започни', за да започнете",
+  "Submit for verification after photo is taken": "След като сте се снимали - изпратете за преглед",
+  "You must allow access to camera in order to take photo": "Моля разрешете достъп до камерата, за да може да снимате"
 }
