Made profile image required

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -543,5 +543,7 @@
   "Click on photo or 'Start verification' button to start": "Кликнете на снимката или натиснете 'Започни', за да започнете",
   "Submit for verification after photo is taken": "След като сте се снимали - изпратете за преглед",
   "You must allow access to camera in order to take photo": "Моля разрешете достъп до камерата, за да може да снимате",
-  "Age preference": "Възрастни предпочитания"
+  "Age preference": "Възрастни предпочитания",
+  "You don't have a profile picture": "Нямате профилна снимка",
+  "Cannot delete profile image": "Не може да изтриете профилна снимка"
 }
