--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,6 +24,7 @@
   "Personality:stepper": "Personality",
   "none income": "No income",
   "low income": "Low income",
+  "Average:income": "Average",
   "middle income": "Average income",
   "high income": "High доход",
   "None:income": "No income"
