Added alert on errors

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -551,5 +551,6 @@
   "Primary": "Основно",
   "Secondary": "Средно",
   "Higher": "Визше",
-  "Enter city": "Въведете град"
+  "Enter city": "Въведете град",
+  "Error loading result.": "Възникна грешка при зареждането на резултатът."
 }
