--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -552,5 +552,8 @@
   "Secondary": "Средно",
   "Higher": "Визше",
   "Enter city": "Въведете град",
-  "Error loading result.": "Възникна грешка при зареждането на резултатът."
+  "Error loading result.": "Възникна грешка при зареждането на резултатът.",
+  "Order": "Подреди по",
+  "Last online": "Последно онлайн",
+  "Newest member": "Най-нови"
 }
